--- a/Desktop/Dashboard/package.json
+++ b/Desktop/Dashboard/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/vite": "^4.0.9",
     "antd": "^5.24.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
